# vision-snapshot-processor

./: .gitignore  README.md  pyproject.toml
src/vision_snapshot_processor/: __init__.py  main.py  room_light_evaluator.py  topics.py  visual_motion_analyzer.py  websocket.py
src/vision_snapshot_processor/processors/: __init__.py  room_light.py
tests/: test_main.py  test_room_light_processor.py  test_visual_motion_analyzer.py
