[project]
name = "vision-snapshot-processor"
version = "0.1.0"
description = "Snapshot-based vision processors that publish Camera Hub compatible topics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python==4.11.0.86",
    "websockets==16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_snapshot_processor"]

[tool.uv]
cache-dir = ".uv-cache"
